# topclaw

./: .coderabbit.yaml  .env.example  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.el.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  NOTICE  README.md  RUN_TESTS.md  SECURITY.md  TESTING_TELEGRAM.md  TRADEMARK.md  bootstrap.ps1  bootstrap.sh  clippy.toml  docker-compose.yml  flake.nix  overlay.nix  package.nix  quick_test.sh  test_telegram_integration.sh  topclaw_install.sh  zeroclaw_install.sh
.gemini/: style-guide.md
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/release/: canary-policy.json  docs-deploy-policy.json  ghcr-tag-policy.json  ghcr-vulnerability-policy.json  nightly-owner-routing.json  prerelease-stage-gates.json  release-artifact-contract.json
.github/security/: deny-ignore-governance.json  gitleaks-allowlist-governance.json  unsafe-audit-governance.json
.github/workflows/: ci-auto-main-release.yml  ci-cd-security.yml  ci-run.yml  docs-deploy.yml  main-branch-flow.md  pub-docker-img.yml  pub-release.yml  sec-audit.yml  sec-codeql.yml  test-coverage.yml  test-e2e.yml
benches/: agent_benchmarks.rs
crates/robot-kit/: Cargo.toml  PI5_SETUP.md  README.md  robot.toml
crates/skill-vetter/: Cargo.toml
crates/skill-vetter/src/: lib.rs
crates/topclaw-hardware/: Cargo.toml
crates/topclaw-hardware/src/: lib.rs
crates/topclaw-hardware/src/peripherals/: arduino_upload.rs  nucleo_flash.rs
data/security/: attack-corpus-v1.jsonl
dev/: README.md  ci.sh  cli.sh  config.template.toml  config.wasm.dev.toml  config.wasm.prod.toml  config.wasm.staging.toml  dev-entrypoint.sh  docker-compose.ci.yml  docker-compose.yml
docs/: README.md  SUMMARY.el.md  SUMMARY.fr.md  SUMMARY.ja.md  SUMMARY.md  SUMMARY.ru.md  SUMMARY.vi.md  SUMMARY.zh-CN.md  actions-source-policy.md  adding-boards-and-tools.md  agnostic-security.md  android-setup.md  arduino-uno-q-setup.md  audit-2026-03-22-simplification.md  audit-event-schema.md  audit-logging.md  audit0318.md  cargo-slicer-speedup.md  channels-reference.md  ci-map.md  codebase-audit.md  commands-reference.md  config-reference.md  custom-providers.md  docker-setup.md  docs-inventory.md  frictionless-security.md  hardware-peripherals-design.md  i18n-coverage.md  i18n-guide.md  langgraph-integration.md  matrix-e2ee-guide.md  mattermost-setup.md  module-classification-hard.md  module-classification.md  network-deployment.md  nextcloud-talk-setup.md  nucleo-setup.md  one-click-bootstrap.md  operations-runbook.md  (+17 more)
docs/datasheets/: arduino-uno.md  esp32.md
docs/getting-started/: README.md  macos-update-uninstall.md
docs/hardware/: README.md
docs/i18n/: README.md
docs/operations/: README.md  branch-protection.md  feature-matrix-runbook.md  heartbeat-runbook.md  nightly-all-features-runbook.md  prerelease-stage-gates.md  required-check-mapping.md  self-improvement-runbook.md
docs/project/: README.md
docs/reference/: README.md
docs/security/: syscall-anomaly-detection.md
docs/sop/: README.md  connectivity.md  observability.md  syntax.md
docs/structure/: README.md
examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
firmware/topclaw-arduino/: topclaw-arduino.ino
firmware/topclaw-esp32-ui/: Cargo.toml
firmware/topclaw-nucleo/: Cargo.toml
firmware/topclaw-uno-q-bridge/: app.yaml
firmware/zeroclaw-arduino/: zeroclaw-arduino.ino
firmware/zeroclaw-esp32/: Cargo.toml  README.md  SETUP.md
firmware/zeroclaw-esp32-ui/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_command_validation.rs
python/: README.md  pyproject.toml
python/tests/: test_tools.py
python/topclaw_tools/: __init__.py
python/topclaw_tools/integrations/: discord_bot.py
python/topclaw_tools/tools/: base.py  memory.py
python/zeroclaw_tools/: __main__.py  agent.py
python/zeroclaw_tools/tools/: __init__.py  web.py
scripts/: bootstrap.sh  install-release.sh  install.sh  recompute_contributor_tiers.sh
scripts/ci/: auto_main_release_plan.py  canary_guard.py  check_binary_size.sh  check_binary_size_regression.sh  deny_policy_guard.py  docs_deploy_guard.py  emit_audit_event.py  feature_matrix.sh  fetch_actions_data.py  flake_retry_probe.py  generate_provenance.py  ghcr_publish_contract_guard.py  ghcr_vulnerability_gate.py  nightly_matrix_report.py  prerelease_guard.py  provider_connectivity_matrix.py  release_artifact_guard.py  release_manifest.py  release_notes_with_supply_chain_refs.py  release_trigger_guard.py  reproducible_build_check.sh  restricted_profile.sh  rollback_guard.py  secrets_governance_guard.py  unsafe_debt_audit.py  unsafe_policy_guard.py
scripts/release/: cut_release_tag.sh  ensure_pub_release.py
scripts/self-improve/: deny_paths.txt  prepare_candidate.sh  promote.sh  prompt-template.txt
site/: README.md  index.html  package-lock.json  package.json  vite.config.ts
site/scripts/: generate-docs-manifest.mjs
site/src/: App.tsx
skills/: README.md
skills/agent-browser-extension/: SKILL.md
skills/change-summary/: SKILL.md
skills/code-explainer/: SKILL.md
skills/desktop-computer-use/: SKILL.md
skills/find-skills/: SKILL.md
skills/local-file-analyzer/: SKILL.md
skills/multi-search-engine/: CHANNELLOG.md  SKILL.md  _meta.json  config.json  metadata.json
src/: backup.rs  identity.rs  lib.rs  main.rs  main_handlers.rs  migration.rs  test_capabilities.rs  update.rs  util.rs
tests/: agent_e2e.rs  agent_loop_robustness.rs  channel_routing.rs  config_persistence.rs  config_schema.rs  dockerignore_test.rs  e2e_auth_switch_live.sh  e2e_quota_live.sh  feature_contract.rs  gemini_fallback_oauth_refresh.rs  hooks_integration.rs  memory_comparison.rs  memory_restart.rs  openai_codex_vision_e2e.rs  provider_resolution.rs  provider_schema.rs  quota_tools_live.rs  telegram_attachment_fallback.rs  telegram_reader_e2e.rs  whatsapp_webhook_security.rs
web/: README.md  index.html  package-lock.json  package.json  package.nix
(+397 files in other folders)
