[workspace]
members = [".", "crates/skill-vetter"]
resolver = "2"

[package]
name = "topclaw"
version = "2026.3.25"
edition = "2021"
authors = ["theonlyhennygod"]
license = "MIT OR Apache-2.0"
description = "Zero overhead. Zero compromise. 100% Rust. The fastest, smallest AI assistant."
repository = "https://github.com/topway-ai/topclaw"
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot"]
categories = ["command-line-utilities", "api-bindings"]
rust-version = "1.92"

[dependencies]
# CLI - minimal and fast
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"

# Async runtime - feature-optimized for size
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }

# HTTP client - minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream", "socks"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_ignored = "0.1"

# Config
directories = "6.0"
toml = "1.0"
shellexpand = "3.1"

# JSON Schema generation for config export
schemars = "1.2"

# Logging - minimal
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono"] }

# Observability - Prometheus metrics
prometheus = { version = "0.14", default-features = false }

# Base64 encoding (screenshots, image data)
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# URL encoding for web search
urlencoding = "2.1"

# HTML conversion providers (web_fetch tool)
fast_html2md = { version = "0.0.58", optional = true }
nanohtml2text = { version = "0.2", optional = true }

# Optional Rust-native browser automation backend
fantoccini = { version = "0.22.1", optional = true, default-features = false, features = ["rustls-tls"] }

# Optional in-process WASM runtime for sandboxed tool execution
wasmi = { version = "1.0.9", optional = true, default-features = true }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID generation
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# CSPRNG for secure token generation
rand = "0.10"

# serde-big-array for wa-rs storage (large array serialization)
serde-big-array = { version = "0.5", optional = true }

# Fast mutexes that don't poison on panic
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# HMAC-SHA256 (Zhipu/GLM JWT auth)
ring = "0.17"

# Protobuf encode/decode (Lark WS frame codec, WhatsApp storage)
prost = { version = "0.14", default-features = false, features = ["derive"], optional = true }

# Memory / persistence
rusqlite = { version = "0.37", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"], optional = true }
tokio-postgres-rustls = { version = "0.12", optional = true }
mysql = { version = "28", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"
cron = "0.15"

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
rustyline = "17.0"
console = "0.16"

# Hardware discovery (device path globbing)
glob = "0.3"

# Binary discovery (init system detection)
which = "8.0"

# Temporary directory creation (for self-update)
tempfile = "3.27"

# WebSocket client channels (Discord/Lark/DingTalk/Nostr)
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
regex = "1.10"
hostname = "0.4.2"
rustls = "0.23"
rustls-pki-types = "1.14.0"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"
topclaw-skill-vetter = { path = "crates/skill-vetter" }

# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"] }
http-body-util = "0.1"

# OpenTelemetry — OTLP trace + metrics export.
# Use the blocking HTTP exporter client to avoid Tokio-reactor panics in
# OpenTelemetry background batch threads when TopClaw emits spans/metrics from
# non-Tokio contexts.
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls-webpki-roots"], optional = true }

# Serial port for peripheral communication (STM32, etc.)
tokio-serial = { version = "5", default-features = false, optional = true }

# USB device enumeration (hardware discovery) — only on platforms nusb supports
# (Linux, macOS, Windows). Android/Termux uses target_os="android" and is excluded.
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
nusb = { version = "0.2", default-features = false, optional = true }

# probe-rs for STM32/Nucleo memory read (Phase B)
probe-rs = { version = "0.31", optional = true }

# PDF extraction for datasheet RAG (optional, enable with --features rag-pdf)
pdf-extract = { version = "0.10", optional = true }

# Terminal QR rendering for WhatsApp Web pairing flow.
qrcode = { version = "0.14", optional = true }

# WhatsApp Web client (wa-rs) — optional, enable with --features whatsapp-web
# Uses wa-rs for Bot and Client, wa-rs-core for storage traits, custom rusqlite backend avoids Diesel conflict.
wa-rs = { version = "0.2", optional = true, default-features = false }
wa-rs-core = { version = "0.2", optional = true, default-features = false }
wa-rs-binary = { version = "0.2", optional = true, default-features = false }
wa-rs-proto = { version = "0.2", optional = true, default-features = false }
wa-rs-ureq-http = { version = "0.2", optional = true }
wa-rs-tokio-transport = { version = "0.2", optional = true, default-features = false }

# Raspberry Pi GPIO / Landlock (Linux only) — target-specific to avoid compile failure on macOS
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22", optional = true }
landlock = { version = "0.4", optional = true }

[features]
# Provider feature flags - gate heavier/niche providers
# Core providers (openai, anthropic, openrouter, ollama, gemini) are always included
provider-bedrock = []
provider-telnyx = []
provider-glm = []

# Default: minimal set for smallest binary
# Use: cargo build (default) for minimal binary
# For full out-of-box experience: cargo build --features standard
default = ["channel-telegram"]

# Standard: common channels and tools for out-of-box experience
standard = ["channel-telegram", "channel-discord", "web-fetch-html2md", "provider-glm", "tool-composio", "tool-discord"]

# Minimal: only essential channel (alias for default)
minimal = ["channel-telegram"]

# All: all channels + all providers
all = [
    "channel-telegram", "channel-discord",
    "provider-bedrock", "provider-telnyx", "provider-glm"
]

# Channel feature flags
channel-telegram = []
channel-discord = []
channel-slack = []
channel-imessage = []
channel-matrix = []
channel-signal = []
channel-whatsapp = []
channel-linq = []
channel-irc = []
channel-nextcloud-talk = []
channel-dingtalk = []
channel-qq = []
channel-lark = []
channel-nostr = []
channel-email = []
channel-mattermost = []
channel-wati = []

builtin-preloaded-skills = []
hardware = ["nusb", "tokio-serial"]
memory-postgres = ["dep:postgres", "dep:tokio-postgres-rustls"]
memory-mariadb = ["dep:mysql"]
observability-otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
web-fetch-html2md = ["dep:fast_html2md"]
web-fetch-plaintext = ["dep:nanohtml2text"]
firecrawl = []
peripheral-rpi = ["rppal"]
browser-native = ["dep:fantoccini"]

# Tool feature flags - gate heavier tools
# These reduce binary size when not needed
tool-composio = []
tool-discord = []

# In-process WASM runtime (capability-based sandbox)
runtime-wasm = ["dep:wasmi"]
sandbox-landlock = ["dep:landlock"]
sandbox-bubblewrap = []
# probe = probe-rs for Nucleo memory read (adds ~50 deps; optional)
probe = ["dep:probe-rs"]
# rag-pdf = PDF ingestion for datasheet RAG
rag-pdf = ["dep:pdf-extract"]
# whatsapp-web = Native WhatsApp Web client with custom rusqlite storage backend
whatsapp-web = ["dep:wa-rs", "dep:wa-rs-core", "dep:wa-rs-binary", "dep:wa-rs-proto", "dep:wa-rs-ureq-http", "dep:wa-rs-tokio-transport", "dep:serde-big-array", "dep:prost", "dep:qrcode"]
# tunnel = Tunneling support (Cloudflare, ngrok, Tailscale)
tunnel = []

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Maximum cross-crate optimization for smaller binaries
codegen-units = 1    # Serialized codegen for low-memory devices (e.g., Raspberry Pi 3 with 1GB RAM)
                     # Higher values (e.g., 8) compile faster but require more RAM during compilation
strip = true          # Remove debug symbols
panic = "abort"      # Reduce binary size

[profile.release-fast]
inherits = "release"
codegen-units = 8    # Parallel codegen for faster builds on powerful machines (16GB+ RAM recommended)
                     # Use: cargo build --profile release-fast

[dev-dependencies]
tempfile = "3.27"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
scopeguard = "1.2"
bytes = "1"

[[bin]]
name = "topclaw"
path = "src/main.rs"

[[bench]]
name = "agent_benchmarks"
harness = false

[lints.clippy]
all = "warn"
pedantic = "warn"
assigning_clones = "allow"
bool_to_int_with_if = "allow"
case_sensitive_file_extension_comparisons = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
doc_markdown = "allow"
field_reassign_with_default = "allow"
float_cmp = "allow"
implicit_clone = "allow"
items_after_statements = "allow"
map_unwrap_or = "allow"
manual_let_else = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
needless_raw_string_hashes = "allow"
new_without_default = "allow"
redundant_closure_for_method_calls = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnecessary_cast = "allow"
unnecessary_lazy_evaluations = "allow"
unnecessary_literal_bound = "allow"
unnecessary_map_or = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"

[lints.rust]
unsafe_code = "forbid"
