[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topclaw-tools"
version = "0.1.0"
description = "Python companion package for TopClaw - LangGraph-based tool calling for consistent LLM agent execution"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "TopClaw Community" }
]
keywords = [
    "ai",
    "llm",
    "agent",
    "langgraph",
    "topclaw",
    "tool-calling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "httpx>=0.25.0",
]

[project.scripts]
topclaw-tools = "topclaw_tools.__main__:main"

[project.optional-dependencies]
discord = ["discord.py>=2.3.0"]
telegram = ["python-telegram-bot>=20.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/topclaw-labs/topclaw"
Documentation = "https://github.com/topclaw-labs/topclaw/tree/main/python"
Repository = "https://github.com/topclaw-labs/topclaw"
Issues = "https://github.com/topclaw-labs/topclaw/issues"

[tool.hatch.build.targets.wheel]
packages = ["topclaw_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
